# 2025_PoC_AGI-frameworks

./: .pre-commit-config.yaml  INSTRUCTIONS.md  README.md  agno-agent-collaborate.ipynb  agno-agent-coordinate.ipynb  agno-agent-secuential.ipynb  agno-agent-workflow.ipynb  crew-agent-coordinate.ipynb  crew-agent-sequential.ipynb  pyproject.toml  strands-agent-sequential.ipynb  strands-multi-agent-collaborate.ipynb  strands-multi-agent-graph.ipynb
agno/latest/config/: agents-sequential.yaml  agents-teams.yaml  config.yaml  tasks-sequential.yaml  tasks-teams.yaml
crew/latest/config/agent-coordinate/: agents.yaml  tasks.yaml
crew/latest/config/agent-sequential/: agents.yaml  crew_config.yaml  integration_config.yaml  tasks.yaml
strands/latest/config/: agents-swarm.yaml  tasks-sequential.yaml  tasks-swarm.yaml
